# Context-Capital

./: .gitignore  CLAUDE.md  README.md  proposal-v2.md  pyproject.toml
docs/: data-model.md  intial-praposal.md  market-research.md  sdd.md  srs.md
docs/adr/: 000-template.md  001-capture-mode.md  002-stack-and-language.md  003-storage.md  004-encryption.md  005-extraction-model.md  006-mcp-transport.md  007-schema-format.md  008-conflict-resolution-policy.md
docs/api/: README.md  openapi.yaml
docs/data-model/: schema.sql
docs/ops/: runbook.md
docs/security/: threat-model.md
docs/spec/: conformance-suite.md  context-protocol-v0.1.md
docs/superpowers/plans/: 2026-06-18-phase1-implementation.md  2026-06-22-postgres-supabase-backend.md  2026-06-22-real-capture-pipeline.md
docs/superpowers/specs/: 2026-06-18-context-capital-build-pack-design.md  2026-06-22-postgres-supabase-backend-design.md  2026-06-22-real-capture-pipeline-design.md
docs/testing/: test-plan.md
src/context_capital/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  sanitize.py
src/context_capital/crypto/: __init__.py  canonical.py  signing.py
src/context_capital/extract/: __init__.py  embed.py  llm.py  mock.py
src/context_capital/ingest/: __init__.py  chatgpt.py  claude.py  streaming.py  types.py
src/context_capital/schema/: __init__.py  json_schema.py  models.py
src/context_capital/storage/: __init__.py  base.py  factory.py  postgres.py  sqlite.py
tests/: conftest.py  test_canonical.py  test_cli_capture.py  test_cli_memories_search.py  test_cli_migrate.py  test_config.py  test_end_to_end.py  test_extract.py  test_extract_embed.py  test_extract_llm.py  test_ingest_chatgpt.py  test_ingest_claude.py  test_ingest_streaming.py  test_ingest_types.py  test_sanitize.py  test_schema.py  test_signing.py  test_storage.py  test_storage_base.py  test_storage_contexts.py  test_storage_factory.py  test_storage_postgres.py  test_storage_postgres_embed.py  test_tools_anonymize.py
tests/fixtures/: valid_context.json
tests/fixtures/adversarial/: directive_injection.json
tests/fixtures/captures/: chatgpt-synthetic.json  claude-synthetic.json
tools/: anonymize_export.py
